testsuite/bsc.evaluator/fileIO/IsReadableAfterClose.bsv.bsc-vcomp-out.expected
checking package dependencies
compiling IsReadableAfterClose.bsv
code generation for sysIsReadableAfterClose starts
Error: "Prelude.bs", line 3853, column 41: (S0085)
  Failure during a file handle operation:
    illegal operation
  During elaboration of `res' at "Prelude.bs", line 3853, column 34.
  During elaboration of `b' at "IsReadableAfterClose.bsv", line 13, column 4.
  During elaboration of `sysIsReadableAfterClose' at
  "IsReadableAfterClose.bsv", line 2, column 8.
